ElasticKubernetesService/1-apiDotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dotnet
spec:
  selector:
    matchLabels:
      app: api-dotnet
  template:
    metadata:
      labels:
        app: api-dotnet
    spec:
      containers:
      - image: 439223726434.dkr.ecr.eu-west-2.amazonaws.com/challenge01api-dotnet:v0.10
        name: api-dotnet
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 800m
#            memory: "300Mi"
          requests:
            cpu: 300m
            memory: "200Mi"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - managed-nodes
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - api-dotnet
            topologyKey: kubernetes.io/hostname
            namespaces:
            - default

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-dotnet
  name: api-dotnet
spec:
  ports:
    - name: service-dotnet-port-name
      port: 80
      targetPort: 80 
      protocol: TCP
  selector:
    app: api-dotnet
